# hua

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml  release.yml
config/: hua.ini
docs/: hua-design.md
docs/superpowers/plans/: 2026-07-21-crash-diagnostics.md
docs/superpowers/specs/: 2026-07-21-crash-diagnostics-design.md
src/: action.c  action.h  app.manifest  autostart.c  autostart.h  config.c  config.h  context.c  context.h  crash_diag.c  crash_diag.h  default_ini.h  gdiplus_flat.h  hook.c  hook.h  hua.h  hua.rc  ini_edit.c  ini_edit.h  main.c  overlay.c  overlay.h  platform.c  platform.h  recognizer.c  recognizer.h  resource.h  update.c  update.h  version.h  watchdog.c  watchdog.h
tests/: test_action.c  test_config.c  test_crash_diag.c  test_ini_edit.c  test_logging.c  test_recognizer.c  test_watchdog.c
